tests/snapshots/conformance__n_number_invalid-utf-8-in-int.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[91, 48, 229, 93, 10]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
