tests/snapshots/conformance__n_number_real_without_fractional_part.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1.]
stdout --- 
<empty>
stderr --- 
error: expected fraction digit following dot, found `]`
 --> stdin:1:4
  |
1 | [1.]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
