tests/snapshots/conformance__n_number_starting_with_dot.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[.123]
stdout --- 
<empty>
stderr --- 
error: unexpected character `.`. expected start of a json value
 --> stdin:1:2
  |
1 | [.123]
  |  ^
