tests/snapshots/conformance__n_number_u+ff11_fullwidth_digit_one.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[１]
stdout --- 
<empty>
stderr --- 
error: unexpected character `１`. expected start of a json value
 --> stdin:1:2
  |
1 | [１]
  |  ^^
