tests/snapshots/conformance__n_number_with_leading_zero.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[012]
stdout --- 
<empty>
stderr --- 
error: unexpected leading zero
 --> stdin:1:2
  |
1 | [012]
  |  ^
  |  |
  |  first zero found here
  |
help: remove the leading zeros
  |
1 - [012]
1 + [12]
  |
